upgrade to latest packaging version

--- a/Pipfile
+++ b/Pipfile
@@ -56,7 +56,7 @@ jmespath = "*"
 tqdm = "*"
 update-checker = "*"
 semantic-version = "*"
-packaging = "==21.3"
+packaging = "*"
 cloudsplaining = ">=0.4.3"
 networkx = "<2.7"
 dockerfile-parse ="*"
