--- a/tests/terraform/graph/checks/resources/ConfigRecorderRecordsAllGlobalResources/expected.yaml
+++ b/tests/terraform/graph/checks/resources/ConfigRecorderRecordsAllGlobalResources/expected.yaml
@@ -1,5 +1,5 @@
 fail:
-  - "aws_config_configuration_recorder_status.fail_1"
-  - "aws_config_configuration_recorder_status.fail_2"
+  - "aws_config_configuration_recorder.fail_recorder_1"
+  - "aws_config_configuration_recorder.fail_recorder_2"
 pass:
-  - "aws_config_configuration_recorder_status.pass"
+  - "aws_config_configuration_recorder.pass_recorder"
