--- a/Manifest.in
+++ b/Manifest.in
@@ -4,3 +4,4 @@ recursive-include checkov/cloudformation/checks/graph_checks *.yaml *.yml
 recursive-include checkov/dockerfile/checks/graph_checks *.yaml *.yml
 recursive-include checkov/github_actions/checks/graph_checks *.yaml *.yml
 recursive-include checkov/terraform/checks/graph_checks *.yaml *.yml
+recursive-include checkov/kubernetes/checks/graph_checks *.yaml *.yml
