--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -164,3 +164,32 @@ jobs:
         run: |
           pipenv run pytest
         working-directory: ${{ env.working-directory }}
+
+  dogfood-tests:
+    runs-on: ubuntu-latest
+    env:
+      PYTHON_VERSION: "3.7"
+      WORKING_DIRECTORY: ./dogfood_tests
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8  # v3
+      - uses: actions/setup-python@2c3dd9e7e29afd70cc0950079bde6c979d1f69f9  # v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - uses: azure/setup-helm@f382f75448129b3be48f8121b9857be18d815a82  # v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: imranismail/setup-kustomize@a76db1c6419124d51470b1e388c4b29476f495f1  # v2
+      - name: Install pipenv
+        run: |
+          python -m pip install --no-cache-dir --upgrade pipenv
+
+      - name: Build & install checkov package
+        run: |
+          pipenv --python ${{ env.PYTHON_VERSION }}     
+          pipenv run pip install pytest pytest-xdist
+          pipenv run python setup.py sdist bdist_wheel
+          bash -c 'pipenv run pip install dist/checkov-*.whl'
+      - name: Run dogfood tests
+        run: |
+          pipenv run pytest
+        working-directory: ${{ env.WORKING_DIRECTORY }}
