fix test structures

--- a/tests/openapi/checks/resource/v2/example_GlobalSecurityScopeUndefined/fail1.yaml
+++ b/tests/openapi/checks/resource/v2/example_GlobalSecurityScopeUndefined/fail1.yaml
@@ -8,6 +8,6 @@ securityDefinitions:
     scopes:
       read:api: read your apis
 security:
-  some_auth:
+  - some_auth:
     - read:api
     - error:api
