--- a/tests/openapi/checks/resource/v2/example_OperationObjectBasicAuth/pass.yaml
+++ b/tests/openapi/checks/resource/v2/example_OperationObjectBasicAuth/pass.yaml
@@ -14,8 +14,8 @@ paths:
           description: 200 response
       security:
         - some_oauth2:
-            - write
-            - read
+            - write:api
+            - read:api
 securityDefinitions:
   some_oauth2:
     type: oauth2
