--- a/tests/openapi/checks/resource/v2/example_OperationObjectConsumesUndefined/fail.yaml
+++ b/tests/openapi/checks/resource/v2/example_OperationObjectConsumesUndefined/fail.yaml
@@ -14,5 +14,5 @@ paths:
           description: 200 response
       security:
         - some_auth:
-            - write
-            - read
+            - write:api
+            - read:api
