--- a/tests/openapi/checks/resource/v2/example_OperationObjectConsumesUndefined/pass.yaml
+++ b/tests/openapi/checks/resource/v2/example_OperationObjectConsumesUndefined/pass.yaml
@@ -18,5 +18,5 @@ paths:
           description: 200 response
       security:
         - some_oauth2:
-            - write
-            - read
+            - write:api
+            - read:api
