--- a/tests/openapi/checks/resource/v2/example_Oauth2SecurityRequirement/fail2.yaml
+++ b/tests/openapi/checks/resource/v2/example_Oauth2SecurityRequirement/fail2.yaml
@@ -11,7 +11,7 @@ paths:
         "200":
           description: Success
 securityDefinitions:
-  oAuth2AuthCodeNeg2:
+  some_auth:
     type: oauth2
     description: For more information, see https://api.my.company.com/docs/oauth
     flow: authorizationCode
@@ -20,5 +20,6 @@ securityDefinitions:
     scopes:
       read:api: read your apis
 security:
-  oAuth2AuthCodeNeg2:
-    - read:api
+  - some_auth:
+      - read:api
+      - write:api
