--- a/tests/openapi/checks/resource/v2/example_Oauth2SecurityValidTokenURL/pass.yaml
+++ b/tests/openapi/checks/resource/v2/example_Oauth2SecurityValidTokenURL/pass.yaml
@@ -3,8 +3,10 @@ info:
   title: test
   version: 1.0.0
 security:
-  - some_auth: []
-  - another_auth: []
+  - some_auth:
+      -
+  - another_auth:
+      -
 securityDefinitions:
   some_auth:
     type: basic
