--- a/tests/openapi/checks/resource/v2/example_OperationObjectImplicitFlow/fail.yaml
+++ b/tests/openapi/checks/resource/v2/example_OperationObjectImplicitFlow/fail.yaml
@@ -14,8 +14,8 @@ paths:
           description: 200 response
       security:
         - some_auth:
-            - write
-            - read
+            - write:api
+            - read:api
 securityDefinitions:
   some_auth:
     type: oauth2
