--- a/tests/openapi/checks/resource/v2/example_OperationObjectProducesUndefined/pass.yaml
+++ b/tests/openapi/checks/resource/v2/example_OperationObjectProducesUndefined/pass.yaml
@@ -16,5 +16,5 @@ paths:
           description: 200 response
       security:
         - some_oauth2:
-            - write
-            - read
+            - write:api
+            - read:api
