--- a/tests/terraform/graph/checks/resources/SGAttachedToResource/expected.yaml
+++ b/tests/terraform/graph/checks/resources/SGAttachedToResource/expected.yaml
@@ -35,6 +35,7 @@ pass:
   - "aws_security_group.pass_redshift"
   - "aws_security_group.pass_route53_resolver_endpoint"
   - "aws_security_group.pass_sagemaker"
+  - "aws_security_group.pass_transfer_server"
   - "aws_security_group.pass_vpc_endpoint"
 fail:
   - "aws_security_group.fail"
