--- a/checkov/terraform/checks/graph_checks/gcp/GCPPostgreSQLDatabaseFlaglog_parser_statsIsSetToOFF.yaml
+++ b/checkov/terraform/checks/graph_checks/gcp/GCPPostgreSQLDatabaseFlaglog_parser_statsIsSetToOFF.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: "Ensure PostgreSQL database flag 'log_parser_stats' is set to 'off'"
   id: "CKV2_GCP_15"
-  category: "GENERAL"
+  category: "LOGGING"
 definition:
   and:
     - cond_type: "attribute"
