feat(openapi): Add v2 openAPI new checks (#4112)
* CKV_OPENAPI_8

* CKV_OPENAPI_9

* CKV_OPENAPI_10

* CKV_OPENAPI_11

* CKV_OPENAPI_12

* CKV_OPENAPI_13

* CKV_OPENAPI_14

* CKV_OPENAPI_15

* CKV_OPENAPI_16

* CKV_OPENAPI_17

* CKV_OPENAPI_18

* use self.is_start_end_line instead of self.irrelevant_keys

* CKV_OPENAPI_19

* CKV_OPENAPI_20

* CKV_OPENAPI_21

* fix structure

* fix test structures

* linting

* improve regex

* remove comment

* update test

* update tests

* move tests to one file (test_python_policies)

* remove URL validation checks (not security related)

* remove URL check tests

* anton's suggesstions

* typo

* adjust type hints

* fix linting

* fix PR comments

Co-authored-by: gruebel <anton.gruebel@gmail.com>

--- a/tests/openapi/checks/resource/v2/example_Oauth2SecurityPasswordFlow/pass.yaml
+++ b/tests/openapi/checks/resource/v2/example_Oauth2SecurityPasswordFlow/pass.yaml
@@ -4,8 +4,11 @@ info:
   version: 1.0.0
 security:
   - some_auth:
-      - write:api
-      - read:api
+      -
+  - another_auth:
+      -
 securityDefinitions:
   some_auth:
     type: basic
+  another_auth:
+    type: oauth2
