--- a/tests/openapi/checks/resource/v2/example_Oauth2SecurityDefinitionImplicitFlow/fail.yaml
+++ b/tests/openapi/checks/resource/v2/example_Oauth2SecurityDefinitionImplicitFlow/fail.yaml
@@ -2,10 +2,7 @@ swagger: "2.0"
 info:
   title: test
   version: 1.0.0
-security:
-  - some_auth:
-      - write:api
-      - read:api
 securityDefinitions:
   some_auth:
-    type: basic
+    type: oauth2
+    flow: implicit
