--- a/tests/terraform/graph/checks/resources/IAMManagedIAMFullAccessPolicy/expected.yaml
+++ b/tests/terraform/graph/checks/resources/IAMManagedIAMFullAccessPolicy/expected.yaml
@@ -1,6 +1,6 @@
 pass:
   - "aws_iam_policy.name_pass1"
-  - "aws_iam_policy.arn_pass1"
+  - "aws_iam_policy.arn_pass2"
   - "aws_iam_role.pass3"
   - "aws_iam_policy_attachment.pass4"
   - "aws_iam_user_policy_attachment.pass5"
@@ -16,3 +16,12 @@ fail:
   - "aws_iam_role_policy_attachment.fail6"
   - "aws_iam_group_policy_attachment.fail7"
   - "aws_ssoadmin_managed_policy_attachment.fail8"
+
+"aws_iam_policy"
+"aws_iam_policy"
+"aws_iam_role"
+"aws_iam_policy_attachment"
+"aws_iam_user_policy_attachment"
+"aws_iam_role_policy_attachment"
+"aws_iam_group_policy_attachment"
+"aws_ssoadmin_managed_policy_attachment"
