enable raising exception in BaseCheckRegistry if env var `TEST_MODE=ON`

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -72,6 +72,7 @@ jobs:
       - name: Unit tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_MODE: ON
         run: |
           pipenv run python -m pytest tests
 
@@ -114,6 +115,7 @@ jobs:
         env:
           LOG_LEVEL: INFO
           BC_KEY: ${{ secrets.BC_API_KEY }}
+          TEST_MODE: ON
         run: |
           # Just making sure the API key tests don't run on PRs
           bash -c './integration_tests/prepare_data.sh ${{ matrix.os }} 3.8'
