--- a/Pipfile
+++ b/Pipfile
@@ -73,7 +73,7 @@ click = ">=8.0.0"
 aiohttp = "*"
 aiodns = "*"
 aiomultiprocess = "*"
-jsonschema = ">=4.6.0"
+jsonschema = ">=4.6.0,<5.0.0"
 prettytable = ">=3.0.0"
 pycep-parser = "==0.3.9"
 charset-normalizer = "*"
