--- a/tests/terraform/graph/checks/resources/IAMManagedIAMFullAccessPolicy/expected.yaml
+++ b/tests/terraform/graph/checks/resources/IAMManagedIAMFullAccessPolicy/expected.yaml
@@ -2,6 +2,7 @@ pass:
   - "aws_iam_policy.name_pass1"
   - "aws_iam_policy.arn_pass2"
   - "aws_iam_role.pass3"
+  - "aws_iam_role.pass3a"
   - "aws_iam_policy_attachment.pass4"
   - "aws_iam_user_policy_attachment.pass5"
   - "aws_iam_role_policy_attachment.pass6"
@@ -11,6 +12,7 @@ fail:
   - "aws_iam_policy.name_fail1"
   - "aws_iam_policy.arn_fail2"
   - "aws_iam_role.fail3"
+  - "aws_iam_role.fail3a"
   - "aws_iam_policy_attachment.fail4"
   - "aws_iam_user_policy_attachment.fail5"
   - "aws_iam_role_policy_attachment.fail6"
