--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -6,14 +6,9 @@ permissions: read-all
 
 jobs:
   lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c  # v3
-      - uses: actions/setup-python@5ccb29d8773c3f3f653e1705f474dfaa8a06a912  # v4
-        with:
-          python-version: 3.9
-      - name: pre-commit
-        uses: pre-commit/action@646c83fcd040023954eafda54b4db0192ce70507  # v3
+    uses: bridgecrewio/gha-reusable-workflows/.github/workflows/pre-commit.yaml@main
+    with:
+      python-version: "3.9"
 
   cfn-lint:
     runs-on: [self-hosted, public, linux, x64]
@@ -30,31 +25,7 @@ jobs:
           cfn-lint tests/cloudformation/checks/resource/aws/**/* -i W
 
   mypy:
-    runs-on: ubuntu-latest
-    env:
-      MYPY_CACHE_DIR: ~/.cache/mypy
-    steps:
-    - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c  # v3
-    - uses: actions/setup-python@5ccb29d8773c3f3f653e1705f474dfaa8a06a912  # v4
-      id: setup-python
-      with:
-        python-version: 3.7
-        cache: "pipenv"
-        cache-dependency-path: "Pipfile.lock"
-    - name: Install pipenv
-      run: |
-        python -m pip install --no-cache-dir --upgrade pipenv
-    - name: Install dependencies
-      run: |
-        pipenv --python 3.7
-        pipenv install --dev
-    - uses: actions/cache@58c146cc91c5b9e778e71775dfe9bf1442ad9a12  # v3
-      with:
-        path: ${{ env.MYPY_CACHE_DIR }}
-        key: mypy-${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('Pipfile.lock') }}
-    - name: Run Mypy
-      run: |
-        pipenv run mypy
+    uses: bridgecrewio/gha-reusable-workflows/.github/workflows/mypy.yaml@main
 
   unit-tests:
     strategy:
