only install pyston lib on Cpython

--- a/Pipfile
+++ b/Pipfile
@@ -77,8 +77,8 @@ jsonschema = ">=4.6.0,<5.0.0"
 prettytable = ">=3.0.0"
 pycep-parser = "==0.3.9"
 charset-normalizer = "*"
-pyston-autoload = {version = "==2.3.5", markers="python_version < '3.11' and (sys_platform == 'linux' or sys_platform == 'darwin') and platform_machine == 'x86_64'", index="pypi"}
-pyston = {version = "==2.3.5", markers="python_version < '3.11' and (sys_platform == 'linux' or sys_platform == 'darwin') and platform_machine == 'x86_64'", index="pypi"}
+pyston-autoload = {version = "==2.3.5", markers="python_version < '3.11' and (sys_platform == 'linux' or sys_platform == 'darwin') and platform_machine == 'x86_64' and implementation_name == 'cpython'", index="pypi"}
+pyston = {version = "==2.3.5", markers="python_version < '3.11' and (sys_platform == 'linux' or sys_platform == 'darwin') and platform_machine == 'x86_64' and implementation_name == 'cpython'", index="pypi"}
 schema = "*"
 requests = ">=2.26.0"
 
