Improve the wording of the check name
This hopefully helps in understanding what this check is about: One doesn't 'enable an origin access'
in CloudFront.

--- a/checkov/terraform/checks/graph_checks/aws/CloudFrontS3OriginConfigWithOAI.yaml
+++ b/checkov/terraform/checks/graph_checks/aws/CloudFrontS3OriginConfigWithOAI.yaml
@@ -1,6 +1,6 @@
 metadata:
   id: "CKV2_AWS_46"
-  name: "Ensure AWS Cloudfront Distribution with S3 have Origin Access set to enabled"
+  name: "Ensure AWS Cloudfront Distribution with S3 origin uses an Origin Access Identity"
   category: "IAM"
 definition:
   or:
