--- a/tests/terraform/graph/checks/resources/CloudFrontS3OriginConfigWithOAI/expected.yaml
+++ b/tests/terraform/graph/checks/resources/CloudFrontS3OriginConfigWithOAI/expected.yaml
@@ -1,5 +1,7 @@
 fail:
-  - "aws_cloudfront_distribution.fail"
+  - "aws_cloudfront_distribution.fail_1"
+  - "aws_cloudfront_distribution.fail_2"
 pass:
   - "aws_cloudfront_distribution.pass_1"
   - "aws_cloudfront_distribution.pass_2"
+  - "aws_cloudfront_distribution.pass_3"
