Check that a `s3_origin_config` sets the `origin_access_identity` attribute
This makes it clear what the check wants to check, and catches potential misconfigurations
where the `s3_origin_config` is given but for some reason empty.

--- a/checkov/terraform/checks/graph_checks/aws/CloudFrontS3OriginConfigWithOAI.yaml
+++ b/checkov/terraform/checks/graph_checks/aws/CloudFrontS3OriginConfigWithOAI.yaml
@@ -19,7 +19,7 @@ definition:
     - cond_type: attribute
       resource_types:
         - aws_cloudfront_distribution
-      attribute: "origin.*.s3_origin_config"
+      attribute: "origin.*.s3_origin_config.origin_access_identity"
       operator: "exists"
     - cond_type: attribute
       resource_types:
