--- a/tests/dockerfile/graph_builder/checks/resources/EnvNodeTlsRejectUnauthorized/fail/Dockerfile.basic
+++ b/tests/dockerfile/graph_builder/checks/resources/EnvNodeTlsRejectUnauthorized/fail/Dockerfile.basic
@@ -1,7 +1,11 @@
 FROM alpine:3.5
 ENV NODE_TLS_REJECT_UNAUTHORIZED 0
 ENV NODE_TLS_REJECT_UNAUTHORIZED=0
+ENV NODE_TLS_REJECT_UNAUTHORIZED="0"
+ENV NODE_TLS_REJECT_UNAUTHORIZED='0'
 ARG NODE_TLS_REJECT_UNAUTHORIZED=0
+ARG NODE_TLS_REJECT_UNAUTHORIZED="0"
+ARG NODE_TLS_REJECT_UNAUTHORIZED='0'
 ARG NODE_TLS_REJECT_UNAUTHORIZED 0
 ENV LOL=666 NODE_TLS_REJECT_UNAUTHORIZED=0
 ENV NODE_TLS_REJECT_UNAUTHORIZED=0 LOL=666
