--- a/tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/fail/Dockerfile.basic
+++ b/tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/fail/Dockerfile.basic
@@ -1,7 +1,11 @@
 FROM alpine:3.5
 ENV PYTHONHTTPSVERIFY 0
 ENV PYTHONHTTPSVERIFY=0
+ENV PYTHONHTTPSVERIFY="0"
+ENV PYTHONHTTPSVERIFY='0'
 ARG PYTHONHTTPSVERIFY=0
+ARG PYTHONHTTPSVERIFY="0"
+ARG PYTHONHTTPSVERIFY='0'
 ARG PYTHONHTTPSVERIFY 0
 ENV LOL=666 PYTHONHTTPSVERIFY=0
 ENV PYTHONHTTPSVERIFY=0 LOL=666
