--- a/tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/expected.yaml
+++ b/tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/expected.yaml
@@ -23,6 +23,10 @@ pass:
 fail:
   - 'fail/Dockerfile.basic.ENV'
   - 'fail/Dockerfile.basic.ENV'
+  - 'fail/Dockerfile.basic.ENV'
+  - 'fail/Dockerfile.basic.ENV'
+  - 'fail/Dockerfile.basic.ARG'
+  - 'fail/Dockerfile.basic.ARG'
   - 'fail/Dockerfile.basic.ARG'
   - 'fail/Dockerfile.basic.ARG'
   - 'fail/Dockerfile.basic.ENV'
