--- a/tests/ansible/checks/task/aws/EC2EBSOptimized/fail.yaml
+++ b/tests/ansible/checks/task/aws/EC2EBSOptimized/fail.yaml
@@ -15,7 +15,7 @@
         image_id: ami-123456
 
     - name: disabled
-      amazon.aws.ec2_instance:
+      ec2_instance:
         name: "public-compute-instance"
         key_name: "prod-ssh-key"
         vpc_subnet_id: subnet-5ca1ab1e
