Updated terraform pass and fail cases

--- a/tests/terraform/graph/checks/resources/S3BucketGlobalViewACLDisabled/expected.yaml
+++ b/tests/terraform/graph/checks/resources/S3BucketGlobalViewACLDisabled/expected.yaml
@@ -1,4 +1,5 @@
 pass:
-  - "aws_s3_bucket_acl.pass"
+  - "aws_s3_bucket_acl.pass_1"
+  - "aws_s3_bucket_acl.pass_2"
 fail:
   - "aws_s3_bucket_acl.fail"
