--- a/tests/terraform/graph/checks/resources/NeptuneDeletionProtectionEnabled/expected.yaml
+++ b/tests/terraform/graph/checks/resources/NeptuneDeletionProtectionEnabled/expected.yaml
@@ -1,4 +1,5 @@
 pass:
   - "aws_neptune_cluster.pass"
 fail:
-  - "aws_neptune_cluster.fail"
+  - "aws_neptune_cluster.fail_1"
+  - "aws_neptune_cluster.fail_2"
