add igraph to dependency

--- a/Pipfile
+++ b/Pipfile
@@ -59,6 +59,7 @@ semantic-version = "*"
 packaging = "*"
 cloudsplaining = ">=0.4.3"
 networkx = "<2.7"
+igraph = "*"
 dockerfile-parse ="*"
 docker = "*"
 configargparse = "*"
