--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,7 @@ flake8 = "*"
 dlint = "*"
 mypy = "*"
 flake8-bugbear = "*"
+asyncmock = "*"  # can be removed when we drop 3.7 support
 
 [packages]
 #
