--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: debug-statements
   - repo: https://github.com/PyCQA/flake8
@@ -17,6 +17,12 @@ repos:
     hooks:
       - id: teyit
         language_version: python3.9
+  - repo: https://github.com/rhysd/actionlint
+    rev: v1.6.23
+    hooks:
+      - id: actionlint-docker
+        # SC2129 - Consider using { cmd1; cmd2; } >> file instead of individual redirects.
+        args: ["-ignore", "SC2129"]
   - repo: https://github.com/Madoshakalaka/pipenv-setup  # Pipfile to setup.py sync checker
     rev: v3.2.0
     hooks:
