Fix DBInstanceClass for Aurora

--- a/tests/cloudformation/checks/resource/aws/example_RDSMultiAZEnabled/RDSMultiAZEnabled-UNKNOWN.yaml
+++ b/tests/cloudformation/checks/resource/aws/example_RDSMultiAZEnabled/RDSMultiAZEnabled-UNKNOWN.yaml
@@ -3,7 +3,7 @@ Resources:
     Type: 'AWS::RDS::DBInstance'
     Properties:
       DBName: 'mydb_enabled'
-      DBInstanceClass: 'db.t3.micro'
+      DBInstanceClass: 'db.r3.2xlarge'
       Engine: 'aurora-mysql'
       MasterUsername: 'master'
       MasterUserPassword: 'password'
