--- a/mypy.ini
+++ b/mypy.ini
@@ -20,5 +20,8 @@ ignore_missing_imports = True
 [mypy-networkx.*]
 ignore_missing_imports = True
 
+[mypy-igraph.*]
+ignore_missing_imports = True
+
 [mypy-checkov.*]
 follow_imports = skip
