fix container latest tag missing results

--- a/tests/azure_pipelines/checks/jobs/example_ContainerLatestTag/azure-pipelines.yml
+++ b/tests/azure_pipelines/checks/jobs/example_ContainerLatestTag/azure-pipelines.yml
@@ -46,3 +46,14 @@ jobs:
 
   steps:
     - script: printenv
+
+- job: FailAnotherLatestTag
+  pool:
+    vmImage: 'ubuntu-18.04'
+
+  container:
+    image: node:latest
+
+  steps:
+    - script: printenv
+
