--- a/checkov/sast/checks/rules/python/SuperuserPort.yaml
+++ b/checkov/sast/checks/rules/python/SuperuserPort.yaml
@@ -9,3 +9,19 @@ rules:
     languages:
       - python
     severity: INFO
+    metadata:
+      cwe:
+      - 'CWE-289: Authentication Bypass by Alternate Name'
+      name: 'superuser port'
+      category: security
+      technology:
+      - gorilla
+      confidence: MEDIUM
+      license: Commons Clause License Condition v1.0[LGPL-2.1-only]
+      references:
+      - https://cwe.mitre.org/data/definitions/289.html
+      subcategory:
+      - audit
+      impact: MEDIUM
+      likelihood: LOW
+    
