Add --force-yes to apt-get --allow-unauthenticated check

--- a/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
+++ b/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
@@ -8,4 +8,4 @@ definition:
       - RUN
     attribute: value
     operator: not_regex_match
-    value: ".*(apt-get[^\\|&;]*\\s+--allow-unauthenticated).*"
+    value: ".*(apt-get[^\\|&;]*\\s+--((allow-unauthenticated)|(force-yes))).*"
