--- a/tests/dockerfile/graph_builder/checks/resources/RunAptGetAllowUnauthenticated/expected.yaml
+++ b/tests/dockerfile/graph_builder/checks/resources/RunAptGetAllowUnauthenticated/expected.yaml
@@ -3,7 +3,14 @@ pass:
   - 'pass/Dockerfile.RUN'
   - 'pass/Dockerfile.RUN'
   - 'pass/Dockerfile.RUN'
+  - 'pass/Dockerfile.RUN'
+  - 'pass/Dockerfile.RUN'
 fail:
+  - 'fail/Dockerfile.RUN'
+  - 'fail/Dockerfile.RUN'
+  - 'fail/Dockerfile.RUN'
+  - 'fail/Dockerfile.RUN'
+  - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
