--- a/tests/dockerfile/graph_builder/checks/resources/RunAptGetAllowUnauthenticated/fail/Dockerfile
+++ b/tests/dockerfile/graph_builder/checks/resources/RunAptGetAllowUnauthenticated/fail/Dockerfile
@@ -1,10 +1,19 @@
 FROM debian:bullseye
 RUN apt-get install --allow-unauthenticated python3
+RUN apt-get install --force-yes python3
 RUN apt-get --allow-unauthenticated install python3
+RUN apt-get --force-yes install python3
 RUN apt-get \
     --allow-unauthenticated \
     install python3
 RUN apt-get \
+    --force-yes \
+    install python3
+RUN apt-get \
     install python3 \
     --allow-unauthenticated
+RUN apt-get \
+    install python3 \
+    --force-yes
 RUN echo "prodsec" && apt-get --allow-unauthenticated install python3
+RUN echo "prodsec" && apt-get --force-yes install python3
