Changes for rpm options

--- a/checkov/dockerfile/checks/graph_checks/RunRpmNoSignature.yaml
+++ b/checkov/dockerfile/checks/graph_checks/RunRpmNoSignature.yaml
@@ -8,4 +8,4 @@ definition:
       - RUN
     attribute: value
     operator: not_regex_match
-    value: ".*(rpm[^\\|&;]*\\s+--no((digest)|(signature)|(verify))).*"
+    value: ".*(rpm[^\\|&;]*\\s+--no((digest)|(signature)|(verify)|(filedigest))).*"
