--- a/tests/dockerfile/graph_builder/checks/resources/RunRpmNoSignature/expected.yaml
+++ b/tests/dockerfile/graph_builder/checks/resources/RunRpmNoSignature/expected.yaml
@@ -4,7 +4,9 @@ pass:
   - 'pass/Dockerfile.RUN'
   - 'pass/Dockerfile.RUN'
   - 'pass/Dockerfile.RUN'
+  - 'pass/Dockerfile.RUN'
 fail:
+  - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
   - 'fail/Dockerfile.RUN'
