--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       fail-fast: true
       matrix:
         python: ["3.7", "3.8", "3.9", "3.10", "3.11"]
-        os: [ubuntu-latest, macos-11, windows-latest]  # setup-kustomize doesn't work with macos-12
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c  # v3
@@ -54,6 +54,8 @@ jobs:
           python -m pip install --no-cache-dir --upgrade pipenv
       - uses: imranismail/setup-kustomize@a76db1c6419124d51470b1e388c4b29476f495f1  # v2
         if: ${{ runner.os != 'windows' }}
+        with:
+          kustomize-version: 4.x
       - name: Build & install checkov package
         run: |
           pipenv --python ${{ matrix.python }}
