--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -191,6 +191,8 @@ jobs:
         run: |
           ## update docs
           export PYTHONPATH='.'
+          # change the doc links to proper markdown versions
+          export CHECKOV_CREATE_MARKDOWN_HYPERLINKS='True'
           git pull
 
           for i in cloudformation terraform kubernetes serverless arm dockerfile secrets github_configuration gitlab_configuration bitbucket_configuration github_actions gitlab_ci bicep openapi bitbucket_pipelines argo_workflows circleci_pipelines azure_pipelines all
