--- a/tests/terraform/graph/checks/resources/CLoudFrontS3OriginConfigWithOAI/expected.yaml
+++ b/tests/terraform/graph/checks/resources/CLoudFrontS3OriginConfigWithOAI/expected.yaml
@@ -3,3 +3,4 @@ fail:
 pass:
   - "aws_cloudfront_distribution.pass_1"
   - "aws_cloudfront_distribution.pass_2"
+  - "aws_cloudfront_distribution.pass_3"
