--- a/checkov/terraform/checks/graph_checks/aws/ElasticSearchDedicatedMasterEnabled.yaml
+++ b/checkov/terraform/checks/graph_checks/aws/ElasticSearchDedicatedMasterEnabled.yaml
@@ -2,15 +2,12 @@ metadata:
   id: "CKV2_AWS_59"
   name: "Ensure ElasticSearch/OpenSearch has dedicated master node enabled"
   category: "GENERAL_SECURITY"
-definition:
-  and:
-    - cond_type: attribute
-      resource_types: "aws_elasticsearch_domain"
-      attribute: "cluster_config.dedicated_master_enabled"
-      operator: "jsonpath_equals"
-      value: "true"
 
-    - cond_type: attribute
-      resource_type: "aws_elasticsearch_domain"
-      attribute: "cluster_config.dedicated_master_enabled"
-      operator: "jsonpath_exists"
+definition:
+  cond_type: attribute
+  resource_types: 
+    - "aws_opensearch_domain"
+    - "aws_elasticsearch_domain"
+  attribute: "cluster_config.dedicated_master_enabled"
+  operator: "equals"
+  value: "true"
