--- a/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
+++ b/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
@@ -1,6 +1,6 @@
 metadata:
   id: "CKV2_DOCKER_8"
-  name: "Ensure that packages with untrusted or missing signatures are not used"
+  name: "Ensure that packages with untrusted or missing signatures are not used by apt-get via the '--allow-unauthenticated' or '--force-yes' options"
   category: "APPLICATION_SECURITY"
 definition:
     cond_type: attribute
