--- a/checkov/dockerfile/checks/graph_checks/RunYumNoGpgCheck.yaml
+++ b/checkov/dockerfile/checks/graph_checks/RunYumNoGpgCheck.yaml
@@ -1,6 +1,6 @@
 metadata:
   id: "CKV2_DOCKER_9"
-  name: "Ensure that packages with untrusted or missing GPG signatures are not used"
+  name: "Ensure that packages with untrusted or missing GPG signatures are not used by dnf or yum via the '--nogpgcheck' option"
   category: "APPLICATION_SECURITY"
 definition:
     cond_type: attribute
