add graph plotting

--- a/Pipfile
+++ b/Pipfile
@@ -62,6 +62,7 @@ packaging = "*"
 cloudsplaining = ">=0.4.3"
 networkx = "<2.7"
 igraph = "*"
+pycairo = "*"  # used for graph plotting
 dockerfile-parse ="*"
 docker = "*"
 configargparse = "*"
