--- a/checkov/terraform/checks/graph_checks/aws/S3AllowsAnyPrincipal.yaml
+++ b/checkov/terraform/checks/graph_checks/aws/S3AllowsAnyPrincipal.yaml
@@ -19,8 +19,8 @@ definition:
         - cond_type: attribute
           resource_types:
             - data.aws_iam_policy_document
-          attribute: "statement.*.principals.identifiers"
-          operator: not_contains
+          attribute: "statement.[*].principals.identifiers[*]"
+          operator: jsonpath_not_equals
           value: "*"
 #      - cond_type: attribute
 #        resource_types:
