--- a/tests/terraform/graph/checks/resources/S3AllowsAnyPrincipal/expected.yaml
+++ b/tests/terraform/graph/checks/resources/S3AllowsAnyPrincipal/expected.yaml
@@ -3,4 +3,4 @@ pass:
   - aws_iam_policy_document.duff
 fail:
   - aws_iam_policy_document.fail
-#  - aws_iam_policy_document.fail2
+  - aws_iam_policy_document.fail2
