Split out the --force-yes check into CKV2_DOCKER_11

--- a/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
+++ b/checkov/dockerfile/checks/graph_checks/RunAptGetAllowUnauthenticated.yaml
@@ -1,6 +1,6 @@
 metadata:
   id: "CKV2_DOCKER_8"
-  name: "Ensure that packages with untrusted or missing signatures are not used by apt-get via the '--allow-unauthenticated' or '--force-yes' options"
+  name: "Ensure that packages with untrusted or missing signatures are not used by apt-get via the '--allow-unauthenticated' option"
   category: "APPLICATION_SECURITY"
 definition:
     cond_type: attribute
@@ -8,4 +8,4 @@ definition:
       - RUN
     attribute: value
     operator: not_regex_match
-    value: ".*(apt-get[^\\|&;]*\\s+--((allow-unauthenticated)|(force-yes))).*"
+    value: ".*(apt-get[^\\|&;]*\\s+--allow-unauthenticated).*"
